--- a/steps/review_dependabot_alerts.yml
+++ b/steps/review_dependabot_alerts.yml
@@ -3,19 +3,19 @@ learningObjectives:
   - Review Dependabot alerts for vulnerabilities.
 hints:
   - Navigate to the Security tab in your GitHub repository.
-  - Look for any alerts marked by Dependabot under 'Security alerts'.
+  - Look for any alerts marked by Dependabot under 'Security'.
 startFlow:
   do:
     - actionId: bot_message
       params:
         person: lucca
         messages:
-          - text: First, let's check the 'Security alerts' tab
+          - text: First, let's check the 'Security' tab
               in your repo to see if Dependabot has sniffed out any
               vulnerabilities. It's like finding hidden treasures, only these
               treasures want to sink your project.
           - text: "Open your [Dependabot vulnerability report](${user.repository}/security/dependabot)."
-          - text: "Let me know how many **Critical** Dependabot vulnerability alerts you see?"
+          - text: "Look at the severity drop down and let me know how many **Critical** Dependabot vulnerability alerts you see?"
 trigger:
   type: user_message
   flowNode:
