chore: put back approved message

--- a/steps/create_dependabot_config.yml
+++ b/steps/create_dependabot_config.yml
@@ -39,3 +39,4 @@ trigger:
         params:
           messages:
             person: lucca
+            approved: "You did it! Now you can merge it."
