--- a/steps/monitor_dependabot_activity.yml
+++ b/steps/monitor_dependabot_activity.yml
@@ -15,7 +15,7 @@ startFlow:
           - text: Alright, the setup is done, but the journey doesn't end here.
           - text: Now, it's time to watch for Dependabot-generated pull requests. Keep an
               eye on the [Actions Tab](${user.repository}/actions/workflows/dependabot/dependabot-updates) and wait for the job to finish.
-          - text: Once the actions is done, choose one of the Dependabot pull requests from the list
+          - text: Once the actions is done (might take a few min tops so hold on tight), choose one of the Dependabot pull requests from the list
           - text: ":instruction[Give me the PR **branch name** and i'll merge it]."
 
 trigger:
