--- a/steps/codespace_start.yml
+++ b/steps/codespace_start.yml
@@ -8,7 +8,7 @@ startFlow:
       params:
         person: lucca
         messages:
-          - text: "Before we continue, please **[open your new Codespace virtual dev environment](${platform.baseUrl}/my-codespace)** or click on Codespace from the Wilco Chat side menu."
+          - text: "Before we continue, please **[open your new Codespace virtual dev environment](${platform.baseUrl}/my-codespace)** or click on Codespace from the Wilco Chat top menu."
           - text: "Please remember, your Codespace (virtual machine) can go idle. You can restart your Codespace by going into your Codespace and clicking restart."
             delay: 1400
     - actionId: ready_message
