--- a/steps/monitor_dependabot_activity.yml
+++ b/steps/monitor_dependabot_activity.yml
@@ -14,9 +14,9 @@ startFlow:
         messages:
           - text: Alright, the setup is done, but the journey doesn't end here.
           - text: Now, it's time to watch for Dependabot-generated pull requests. Keep an
-              eye on the [Actions Tab](${user.repository}/actions/workflows/dependabot/dependabot-updates) and check it's progress.
+              eye on the [Actions Tab](${user.repository}/actions/workflows/dependabot/dependabot-updates) and check its progress.
           - text: While the Dependabot action is running (might take a few minutes to complete) it will create a bunch of pull requests as it goes.
-          - text: Keep an eye on [your Pull Requests tab](${user.repository}/pulls) as the dependabot creates them.
+          - text: Keep an eye on [your Pull Requests tab](${user.repository}/pulls) as dependabot creates them.
           - text: Choose one of the Dependabot pull requests from the list and copy the branch name.
           - text: ":instruction[Give me the PR **branch name** so i'll merge it]."
 
@@ -45,7 +45,7 @@ trigger:
             params:
               person: lucca
               messages:
-                - text: Thanks for the update! I'll now merge the PR for you. Give me a moment.
+                - text: Thanks for the update! I'll merge the PR for you. Give me a moment.
           - actionId: github_merge_pr
             params:
               headBranch: ${userMessageText}
