--- a/steps/monitor_dependabot_activity.yml
+++ b/steps/monitor_dependabot_activity.yml
@@ -53,11 +53,12 @@ trigger:
             params:
               person: lucca
               messages:
-                - text: "You've just completed the Automate with Dependabot quest—great job! You configured GitHub Dependabot to automatically scan your project's dependencies for vulnerabilities and set up a Dependabot config file to keep your dependencies updated. You also practiced monitoring Dependabot alerts and reviewing its security update pull requests to keep your project safe."
-                - text: "Next, to strengthen your skills and apply them more confidently, here's a personalized learning path:"
-                - text: "👉 GitHub Skills: [Introduction to CodeQL](https://github.com/skills/introduction-to-codeql) – practice running code scanning with CodeQL to identify and fix insecure coding patterns in your codebase."
-                - text: "👉 Microsoft Learn: [Configure Dependabot security updates on your GitHub repo](https://learn.microsoft.com/en-us/training/modules/configure-dependabot-security-updates-on-github-repo/) – deepen your understanding of dependency management by learning how to configure Dependabot alerts, analyze vulnerability details, and manage automated security updates on GitHub."
-                - text: "👉 Microsoft Applied Skills: [GitHub Advanced Security](https://learn.microsoft.com/en-us/credentials/certifications/github-advanced-security/) – earn a credential that validates your GitHub security expertise, from finding vulnerabilities to implementing secure workflows."
+                - text: "🚀 Automate with Dependabot"
+                - text: "You've just completed the Automate with Dependabot quest—great job! This experience helped you configure GitHub Dependabot to automatically scan your project’s dependencies for vulnerabilities, set up update configurations, and review automated pull requests to keep your codebase secure and up to date."
+                - text: "🧠 What's Next?"
+                - text: "To strengthen your skills and validate your expertise, pursue the official:"
+                - text: "👉 [GitHub Advanced Security Certification](https://learn.microsoft.com/en-us/credentials/certifications/github-advanced-security/)"
+                - text: "Earn a verified credential from GitHub that demonstrates your ability to implement secure development workflows, including dependency and vulnerability management with Dependabot. This certification page provides direct access to the required learning paths, skills modules, and the certification exam."
           - actionId: finish_step
 
       else:
